# NicheRedstone

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 5cedc2e8d52c_autogenerate_task_id.py  92e2b427e682_create_tables.py
app/db/: config.py  crud.py  models.py  schemas.py
app/routers/blocks/: blockactions.py  blocks.py
app/routers/misc/: placeholders.py
app/routers/roadmap/: plans.py
app/util/: db_dependency.py  secure_url.py  serializer.py
docker/: .dockerignore  Dockerfile  frontend.Dockerfile
js/: block-actions.js  blocks.js  tasks.js
static/styling/: actionbar.css  base.css  blocks.css  index.css  roadmap.css  snackbar.css
templates/: base.html  index.html
templates/macros/: block_macro.html  task_macro.html
templates/partials/: 404.html  block.html  blocks.html  index.html  new_task.html  roadmap.html
